--- a/wp-content/themes/understrap-child/sass/theme/partials/controls/vertical_rhythm_controls.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/controls/vertical_rhythm_controls.scss
@@ -33,6 +33,7 @@ $rvr-1_25:   calc(var(--baseline) * 1.25rem);
 $rvr-1_5:    calc(var(--baseline) * 1.5rem);
 $rvr-1_75:   calc(var(--baseline) * 1.75rem);
 $rvr-2:      calc(var(--baseline) * 2rem);
+$rvr-2_25:    calc(var(--baseline) * 2.25rem);
 $rvr-2_5:    calc(var(--baseline) * 2.5rem);
 $rvr-3:      calc(var(--baseline) * 3rem);
 $rvr-4:      calc(var(--baseline) * 4rem);
