--- a/wp-content/themes/understrap-child/sass/theme/partials/functions/responsive_text_functions.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/functions/responsive_text_functions.scss
@@ -3,11 +3,11 @@
 // ==========================================================================
 
 // These values are the minimum and maximum viewport sizes to apply the font scaling
-$min_width:                 200;
+$min_width:                 300;
 $max_width:                 3000;
 // These values represent the range of font-size to apply
 // These values effect the base font-size, headings and other elements will scale proportionally
-$min_font:                 20;
+$min_font:                 8;
 $max_font:                  30; 
 
 :root { font-size: #{$min_font}px; }
@@ -31,9 +31,14 @@ $max_font:                  30;
 
 
 $modularscale: (
-  base: 18px,
-  ratio: 1.4,
+  base: .5rem,
+  ratio: 1.5,
+  320px: (
+    base: .75rem,
+    ratio: 1.5,
+    ),
   576px: (  
+    base: 1rem,
     ratio: 1.3,
   ),
   768px: (
