--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/utility_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/utility_styles.scss
@@ -1,4 +1,5 @@
 
+
 .tldr{
     font-family: $font-family-monospace;
     // padding: 0 $ms-2 0 $ms-2;
@@ -7,12 +8,19 @@
     font-weight: 400;
 }
 
+#main > section > article.panel.business-value.objectives > div > hgroup > h2{
+    letter-spacing: 0rem;
+}
+
+.grow p:first-of-type{
+    letter-spacing: -.05rem;
+}
 
 
  
 
 // ==========================================================================
-// svg fills
+// svg adjustments
 // ==========================================================================
 
 // business value panel__advancing objectives--horz diagram
@@ -24,7 +32,7 @@
 
 // business value panel__advancing objectives--horz diagram
 
-.opt-vert-diagram {
+.diagram__end-to-end {
     .cls-2, .cls-12 {
         fill: $tungsten;
     }
@@ -45,3 +53,21 @@
 .diagram-content .metrics{
 	padding: 0 .5rem;
 }
+
+.chev--dwn{
+    width: 2rem;
+    stroke-width: .1rem;
+    stroke-linecap: round;
+}
+// @mixin myccon(){
+//     @include make-container(){
+//     margin-left: 0px;
+//     margin-right: 0px;
+// }
+// }
+// @mixin myrow(){
+//     @include make-row(){
+//     padding-left: 0px;
+//     padding-right: 0px;
+// }
+// }
