--- a/wp-content/themes/understrap-child/sass/theme/partials/section_styles/panel_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/section_styles/panel_styles.scss
@@ -1,10 +1,207 @@
-.splash-panel{
+
+.splash {
+    h1{
+font-size:$h4-font-size;
+color: $headings-color;
+font-family: $headings-font-family;
+font-weight: $headings-font-weight;
+    }
+    h2, h3{
+font-size:$display-3-font-size;
+color: $display-color;
+font-family: $display-font-family;
+font-weight: $display-font-weight;
+
+    }
+    p{
+font-size: $body-3-font-size;
+color: $body-color;
+font-family: $body-font-family;
+font-weight: $body-font-weight;
+    }
+}
+
+
+// .splash{
+// 	@extend .container-fluid;
+// 	}
+
+.home-page.splash{ 
+	h1{
+	font-size: ms(5.5);	
+	}
+	h2{
+	font-size: ms(3.85);
+	letter-spacing: -.05rem;
+	}
+	p:first-of-type{
+       font-size:$display-3-font-size;
+color: $display-color;
+font-family: $display-font-family;
+font-weight: $display-font-weight;
+    }
+
+    p:last-of-type{
+        font-size: ms(2.25);
+    }
+}
+
+
+.home-page.splash.panel-hero__img--background{
+    background: none;
+    @include media-breakpoint-up(lg) {
+	background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/me.jpg");
+    background-position: right bottom;
+    background-size: 100%;
+    background-repeat: no-repeat;	
+	}
+}
+
+
+.home-page.splash{
+	.panel-hero__img--mobile{
+	width: 50%;
+	left: 50%;
+	}
+}
+
+
+.about-me.splash.panel-hero__img--background{
+  background: none;
+    @include media-breakpoint-up(lg) {
+	background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/shoes.jpg");
+    background-position: left bottom;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+}
+
+
+.about-me.splash{
+	.panel-hero__img--mobile{
+	width: 50%;
+	left: 0;
+	}
+}
+
+// business-value panel / subpanels
+.business-value h1{
+	@extend .page__title;
+}
+
+.business-value p{
+@extend .body-line-height;
+font-size: $body-4-font-size;
+color: $body-color;
+font-family: $body-font-family;
+font-weight: $body-font-weight;
+margin-bottom: $body-margin-bottom;	
 
 }
-.intro-panel{}
 
-.business-value-panel{
 
+
+.diagram__objectives--vertical .diagram-content{
+	li{
+		font-size: ms(3);
+        padding-right: 0;
+		}
+		ol{
+			margin-block-end: 0px;
+			margin-block-start: 0px;
+			padding-inline-start: $ms-5;
+			}
+		
+	.br{
+		display: none;
+		}
+		.icon{
+			padding: 0;
+		}
+	.cls-1{
+		fill: $secondary;
+		}
+		}
+
+
+
+.diagram-content__end-to-end--vertical{
+	@include make-row();
+	position: relative;
+	margin-left: 0px;
+	margin-right: 0px;
+	width: 100%;
+	height: auto;
 }
+.diagram-content__caption--sticky{
+	@include make-col-ready();
+	@include make-col(4);
+	padding-top: $rvr-4;
+	margin-bottom: $rvr-4;
+	padding-left: 0px;
+	padding-right: 0px;
+	position: sticky;
+    top: 0;
+    left: 0;
+    height: 10rem;
+    font-family: $font-family-monospace;
+}
+
+.diagram-content__end-to-end-diagram--vert{
+	@include make-col-ready();
+	@include make-col(8);
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+.end-to-end--vert{
+	width: 100%;
+}
+
+.diagram__modern-marketing{
+	width: 100%;
+}
+
+.intro-panel {}
+
+
+
+
 
 .cta-panel{}
+
+
+.diagram__competitive-advantage #Layer_2 .st0 {
+    fill: $tungsten;
+}
+
+.diagram__competitive-advantage #Layer_1 {
+    fill: $gray-700;
+}
+
+.diagram__competitive-advantage, .diagram__competitive-advantage #Layer_1 {
+    .st0, .st8, .st12, .st13 {
+        stroke: $gray-700;
+    }
+}
+
+.diagram__competitive-advantage {
+    .st1 {
+        font-weight: 600;
+        font-size: $ms-3;
+    }
+
+    .st4 {
+        font-size: $ms-2_5;
+        font-weight: 300;
+        letter-spacing: .05rem;
+    }
+
+    .st7 {
+        font-size: $ms-2;
+    }
+
+    .st1, .st4, .st6, .st7 {
+        font-family: $font-family-monospace;
+    }
+}
