--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/line_height_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/line_height_variables.scss
@@ -1,5 +1,5 @@
 // ==========================================================================
-// Line Height Variables Variables
+// Line Height Variables
 // ==========================================================================
 $line-height-0:         $rvr-0;  
 $line-height-_05:       $rvr-_05;
@@ -10,6 +10,54 @@ $line-height-_6:        $rvr-_6;
 $line-height-_75:       $rvr-_75;
 $line-height-1:         $rvr-1;  
 $line-height-1_5:       $rvr-1_5;
-$line-height-2:         $rvr-2;  
+$line-height-1_75:      $rvr-1_75;
+$line-height-2:         $rvr-2;
+$line-height-2_25:      $rvr-2_25;    
 $line-height-2_5:       $rvr-2_5;
 $line-height-3:         $rvr-3;  
+
+
+// ==========================================================================
+// Line Height Variables (to be used in mixins)
+// ==========================================================================
+
+.body-line-height{
+              line-height: $rvr-1_75;
+       @include media-breakpoint-up(sm) {
+ 
+    }
+        @include media-breakpoint-up(md) {
+    }
+        @include media-breakpoint-up(lg) {
+    }
+        @include media-breakpoint-up(xl) {
+    }
+    
+}
+
+.display-line-height{
+    line-height: $rvr-1_75;
+        @include media-breakpoint-up(sm) {
+    }
+        @include media-breakpoint-up(md) {
+    }
+        @include media-breakpoint-up(lg) {
+    }
+        @include media-breakpoint-up(xl) {
+    }
+    
+}
+
+.headings-line-height{
+     line-height: $rvr-4;
+       @include media-breakpoint-up(sm) {
+
+    }
+        @include media-breakpoint-up(md) {
+    }
+        @include media-breakpoint-up(lg) {
+    }
+        @include media-breakpoint-up(xl) {
+    }
+    
+}
