--- a/wp-content/themes/understrap-child/sass/theme/partials/controls/vertical_rhythm_controls.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/controls/vertical_rhythm_controls.scss
@@ -35,7 +35,11 @@ $rvr-1_75:   calc(var(--baseline) * 1.75rem);
 $rvr-2:      calc(var(--baseline) * 2rem);
 $rvr-2_25:    calc(var(--baseline) * 2.25rem);
 $rvr-2_5:    calc(var(--baseline) * 2.5rem);
+$rvr-2_75:    calc(var(--baseline) * 2.75rem);
 $rvr-3:      calc(var(--baseline) * 3rem);
+$rvr-3_25:    calc(var(--baseline) * 3.25rem);
+$rvr-3_5:    calc(var(--baseline) *  3.5rem);
+$rvr-3_75:    calc(var(--baseline) * 3.75rem);
 $rvr-4:      calc(var(--baseline) * 4rem);
 $rvr-5:      calc(var(--baseline) * 5rem);
 $rvr-6:      calc(var(--baseline) * 6rem);
