--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/state_styles.scss
@@ -1,3 +1,13 @@
+.navbar-brand{
+@include media-breakpoint-up(xs) {
+display: none;
+@include media-breakpoint-up(md) {
+	display: block;
+}
+}
+}
+
+
 .panel.home-page.splash{
     .hide-2 {display: none;}
     @include media-breakpoint-up(sm) {
