--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/line_height_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/line_height_variables.scss
@@ -14,6 +14,7 @@ $line-height-1_75:      $rvr-1_75;
 $line-height-2:         $rvr-2;
 $line-height-2_25:      $rvr-2_25;    
 $line-height-2_5:       $rvr-2_5;
+$line-height-2_75:       $rvr-2_75;
 $line-height-3:         $rvr-3;  
 
 
