--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/base_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/base_styles.scss
@@ -96,26 +96,26 @@ figure{}
 //     font-weight: unset;
 //     font-size: unset;
 // }
-.panel,.container{
+.container{
     padding-left: 40px;
     padding-right: 40px;
 }
-
-
-@media (min-width: 300px){
-    .panel, .container{
-    width: 320px;
-    max-width: 100%
-    }
-    .navbar .container{
+ .navbar .container{
         padding-left: 15px;
         padding-right: 15px;
         margin: 0 auto;
+        position: relative;
     }
+
+@media (min-width: 300px){
+     .container{
+    width: 320px;
+    max-width: 100%
+    } 
 }
 
 @media (min-width: 576px) {
-    .panel, .container {
+     .container {
        
     }
 }
@@ -126,40 +126,40 @@ figure{}
         max-width: 100%;
     }
 
-    .panel, .container {
+     .container {
         width: 540px;
         max-width: 100%;
     }
 }
 
 @media (min-width: 992px) {
-    .panel, .container {
+     .container {
         width: 960px;
         max-width: 100%;
     }
 }
 
 @media (min-width: 1200px) {
-    .panel, .container {
+     .container {
         width: 1140px;
         max-width: 100%;
     }
 }
 
 @media (min-width: 1400px) {
-    .panel, .container {
+     .container {
         max-width: 1200px;
     }
 }
 
 @media (min-width: 1600px) {
-    .panel, .container {
+     .container {
         max-width: 1400px;
     }
 }
 
 @media (min-width: 1900px) {
-    .panel, .container {
+     .container {
         max-width: 1600px;
     }
 }
